pagina_web_completada

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,23 +1,23 @@
-/* Estilos generales */
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #ffffff;
     color: #333;
     margin: 0;
     padding: 0;
+    width: 100;
 }
 
-/* Contenedor principal */
 .container {
-    max-width: 900px;
-    margin: 40px auto;
+    width: 90%;
+    max-width: 1200px;
+    margin: 0 auto;
     background: #bdfffc;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Encabezado */
 header {
     text-align: center;
     background-color: #006eff;
@@ -26,11 +26,11 @@ header {
     border-radius: 8px 8px 0 0;
 }
 
-h1, h2 {
+h1,
+h2 {
     margin: 5px 0;
 }
 
-/* Secciones */
 section {
     padding: 15px;
     border-bottom: 2px solid #ddd;
@@ -41,7 +41,6 @@ h3 {
     margin-top: 20px;
 }
 
-/* Listas */
 ul {
     background: #ecf0f1;
     padding: 10px;
@@ -53,7 +52,6 @@ ul li {
     padding: 5px 0;
 }
 
-/* Enlaces */
 a {
     color: #2980b9;
     text-decoration: none;
@@ -64,7 +62,6 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Pie de página */
 footer {
     text-align: center;
     padding: 10px;
@@ -73,10 +70,10 @@ footer {
     border-radius: 0 0 8px 8px;
     margin-top: 20px;
 }
-/* Imagenes */
-.imagen {
+
+img {
     display: block;
-    margin: 20px auto;
-    max-width: 50%;
-    border-radius: 8px;
+    margin: 40px auto;
+    max-width: 100%;
+    height: auto;
 }
